tests/compile_fail/transform_brace_arrow_missing_leaf.stderr
error[E0277]: the stage arrow declares an output fact missing from the handler's `Output`
  --> tests/compile_fail/transform_brace_arrow_missing_leaf.rs:45:13
   |
45 |     let _ = obzenflow_dsl::transform!(Input -> { First, Missing } => Handler);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this arrow output contract is not contained in the handler's `Output` set
   |
   = help: the trait `ArrowOutputsAreDeclaredByHandler<WithMember<First, EmptySet>, SubsetProofStep<MemberFound, SubsetProofStep<MemberAfter<_>, SubsetProofEnd>>>` is not implemented for `WithMember<First, WithMember<Missing, EmptySet>>`
   = note: the stage arrow is canonical: make the handler's `Output` carrier or witness expose the same complete flat fact set, or change the arrow first if the stage contract is wrong; use `stage_fact_set![...]` only for an effectful-transform witness, and a `StageOutputFacts` carrier where values are returned or applied (FLOWIP-120z B9)
note: required by a bound in `__obzenflow_assert_output_contract_equality`
  --> tests/compile_fail/transform_brace_arrow_missing_leaf.rs:45:13
   |
45 |     let _ = obzenflow_dsl::transform!(Input -> { First, Missing } => Handler);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             required by a bound in this function
   |             required by this bound in `__obzenflow_assert_output_contract_equality`
   = note: this error originates in the macro `$crate::__obzenflow_transform_typed` which comes from the expansion of the macro `obzenflow_dsl::transform` (in Nightly builds, run with -Z macro-backtrace for more info)
